fix(match2): hide on mobile not working (#6204)

--- a/stylesheets/commons/Brackets.less
+++ b/stylesheets/commons/Brackets.less
@@ -480,12 +480,6 @@
 	}
 }
 
-.brkts-popup .hide-mobile {
-	@media ( max-width: 768px ) {
-		display: none;
-	}
-}
-
 @media ( min-width: 769px ) {
 	.brkts-match-info-popup-sc-ffa:not( .brkts-match-info-flat ) {
 		overflow: auto;
